# full_stack_todo_rust

backend/rust/axum/lessons/data/: .gitignore  Cargo.toml
backend/rust/axum/lessons/data/src/: lib.rs  main.rs
backend/rust/axum/lessons/data/src/database/: prelude.rs
backend/rust/axum/lessons/hello_world/: .gitignore  Cargo.toml
backend/rust/axum/lessons/hello_world/src/: lib.rs  main.rs
backend/rust/axum/lessons/hello_world/src/routes/: custom_json_extractor.rs  get_json.rs  hello_world.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  returns_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
backend/rust/axum/project_solution/: Cargo.toml
backend/rust/axum/project_solution/src/: app_state.rs  lib.rs  main.rs  router.rs
backend/rust/axum/project_solution/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
backend/rust/axum/project_solution/src/errors/: app_error.rs
backend/rust/axum/project_solution/src/middleware/: require_authentication.rs
backend/rust/axum/project_solution/src/queries/: task_queries.rs  user_queries.rs
backend/rust/axum/project_solution/src/routes/: hello_world.rs  mod.rs
backend/rust/axum/project_solution/src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_task.rs  get_all_tasks.rs  get_one_task.rs  get_tasks.rs  mod.rs  partial_update_task.rs  update_task.rs  update_tasks.rs
backend/rust/axum/project_solution/src/routes/users/: create_user.rs  delete_user.rs  login.rs  logout.rs  mod.rs
backend/rust/axum/project_solution/src/utilities/: hash.rs  jwt.rs  token_wrapper.rs
