[package]
name = "project_solution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
