[package]
name = "project_solution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
