[package]
name = "project_solution"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }
